# mcp-creator-mcp

./: .env.example  .gitignore  README.md  example_mcp_config.json  gradio_interface.py  main.py  pyproject.toml
archived/creative_writing_assistant/: README.md  claude_config.json  main.py
archived/syntax_checker/: README.md  claude_config.json  main.py
archived/task_manager/: README.md  claude_config.json  main.py
mcp_creator_workflows/: .gitkeep
mcp_servers/: .gitkeep
src/mcp_creator/: __about__.py  __init__.py
src/mcp_creator/ai_guidance/: __init__.py  content_manager.py
src/mcp_creator/ai_guidance/prompts/: best_practices.md  sampling.md
src/mcp_creator/core/: __init__.py  config.py  server_generator.py  template_manager.py
src/mcp_creator/utils/: __init__.py
src/mcp_creator/workflows/: __init__.py  workflow_engine.py
templates/languages/python/basic_server/: metadata.json  template.py.j2
templates/languages/python/fastmcp_server/: metadata.json  template.py.j2
